# stereo-lidar-calibration

./: .gitignore  CMakeLists.txt  README.md
config/: hdl64_mono.yaml  hdl64_stereo.yaml  rs128_mono.yaml  rs128_stereo.yaml  vlp16_mono.yaml
experiment/: calibration_lc.cpp  calibration_lcc.cpp  refine_matlab_results.cpp
include/: box_fitting.hpp  config.hpp  detect_corners.hpp  evaluation.hpp  extractChessboard.hpp  extractImageFeature.hpp  extractLidarFeature.hpp  matlab_data.hpp  optimization.hpp  utils.hpp
libcbdetect/: CMakeLists.txt
libcbdetect/include/libcbdetect/: config.h
matlab/: CameraParameters1.mat  CameraParameters2.mat  camera_lidar_calibration_rs128.m  camera_lidar_calibration_rs128_right.m  camera_lidar_calibration_vlp16.m  left_camera_lidar_calibration.m  left_imageCorners3d.mat  left_imagePoints.mat  left_lidar3DCorners.mat  left_lidar_tform.mat  lidar3DCorners.mat  right_camera_lidar_calibration.m  right_imageCorners3d.mat  right_imagePoints.mat  right_lidar3DCorners.mat  right_lidar_tform.mat  rs128_left_camera.mat  rs128_right_camera.mat  stereoParams.mat  stereoParams_rs128.mat  stereo_calibration.m  stereo_calibration_rs128.m  test1.m  test2.asv  test2.m  test3.asv  test3.m
samples/: CMakeLists.txt  huangpu128.cpp  mono_lidar_calib.cpp  mono_lidar_calib_with_point_cons_hdl64.cpp  mono_lidar_calib_with_point_cons_vlp16.cpp  mono_lidar_calib_with_point_cons_vpl16.cpp  mono_lidar_calibration_with_point_cons.cpp  stereo_lidar_calib.cpp  stereo_lidar_calib_with_point_cons_hdl64.cpp
script/: mat2csv.py  open3d_read_pcd.py  opencv_find_chessboard_corners.py  read_bag.py
src/: config.cpp  evaluation.cpp  extractChessboard.cpp  extractImageFeature.cpp  extractLidarFeature.cpp  optimization.cpp  utils.cpp
test/: test_extract_chessboard.cpp  test_extract_image_feature.cpp  test_extract_lidar_feature.cpp  test_matlab_data.cpp  test_optimization.cpp
test/unit_test/: test_extractLidarFeature.cpp  test_optimization.cpp  test_utils.cpp
